--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/style exercício 2.css
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/style exercício 2.css
@@ -14,14 +14,15 @@
   .baloon {
     position: absolute;
     z-index: 3;
-    left: 500px;
+    left: 200px;
   }
   
   .speach {
     font-size: 25px;
     position: absolute;
     z-index: 4;
-    left: 200px;
+    left: 220px;
+    top: 120px;
   }
   
   .bowser {
