itens da lista com fonte diferente ao clicar sobre

--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/style exercicio 3.css
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/style exercicio 3.css
@@ -4,3 +4,6 @@ h1, p {
 li:hover {
     background-color: yellow;
 }
+li:active {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
