--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/style exercício 4.css
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/style exercício 4.css
@@ -3,3 +3,18 @@ div:hover {
     border-radius: 10px;
     border-width: 2px;
 }
+div:nth-of-type(1) {
+    background-color: rgb(119, 182, 234);
+}
+div:nth-of-type(2) {
+    background-color: rgb(255, 0, 53);
+}
+div:nth-of-type(3) {
+    background-color: rgb(240, 168, 104);
+}
+div:nth-of-type(4) {
+    background-color: rgb(31, 8, 18);
+}
+div:nth-of-type(5) {
+    background-color: rgb(22, 244, 208)
+}
