--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/style exercício 4.css
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/style exercício 4.css
@@ -18,3 +18,28 @@ div:nth-of-type(4) {
 div:nth-of-type(5) {
     background-color: rgb(22, 244, 208)
 }
+div:nth-of-type(4) > h3 {
+    color: rgb(119, 182, 234);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+div:nth-of-type(3) > h3 {
+    color: rgb(255, 0, 53);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+div:nth-of-type(5) > h3 {
+    color: rgb(240, 168, 104);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+div:nth-of-type(1) > h3 {
+    color: rgb(31, 8, 18);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+div:nth-of-type(2) > h3 {
+    color: rgb(22, 244, 208)
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+}
