--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/style exercício 4.css
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/style exercício 4.css
@@ -11,6 +11,7 @@ div:nth-of-type(2) {
 }
 div:nth-of-type(3) {
     background-color: rgb(240, 168, 104);
+    height: 50px;
 }
 div:nth-of-type(4) {
     background-color: rgb(31, 8, 18);
